--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,23 @@ h1{
     position:absolute;
     left:10rem;
 }
+p{
+    width:50rem;
+    height:80px;
+    position:relative;
+    top:31rem;
+    left:200px;
+    font-size:1.2rem;
+}
+h3{
+   text-align:center;
+   font-size:1.5rem
+}
+#email, #password{
+   width:280px;
+   height:40px;
+   border-radius:25px;
+   border:1px solid;
+   background-color:transparent;
+   box-shadow:2px 2px 2px green;
+}
