--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,13 @@ body{
 form{
     background:transparent;
     width:300px;
-    height:27rem;
+    height:25rem;
     border-radius:20px;
     padding:20px;
     box-shadow:3px 2px 2px 3px rgb(3, 69, 110);
     position:relative;
     left:65rem;
-    top:40px
+    top:10px
 }
 h1{
     font-size:3.5rem;
@@ -38,4 +38,42 @@ h3{
    border:1px solid;
    background-color:transparent;
    box-shadow:2px 2px 2px green;
+}
+div{
+    position:relative;
+    top:18px;
+
+}
+.forgot{
+    position:relative;
+    left:170px;
+    color:black;
+    text-decoration:none;
+}
+.forgot:hover{
+    text-decoration: underline;
+}
+.forgot:active{
+    color:blue;
+}
+
+
+button{
+    position:relative;
+    top:41px;
+   width:250px;
+   height:40px;
+   border-radius: 25px;
+  left:22px;
+  border:1px solid;
+  box-shadow: 2px 2px 2px green;
+ background:linear-gradient(90deg, rgb(0,158,245), rgb(0,232,165));
+ font-size:1.2rem;
+ font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+ cursor: pointer;
+}
+button:hover{
+    color:white;
+    background:linear-gradient(90deg, green,lightblue);
+    
 }
