--- a/styles.css
+++ b/styles.css
@@ -77,3 +77,16 @@ button:hover{
     background:linear-gradient(90deg, green,lightblue);
     
 }
+.reg{
+    position:relative;
+    top:80px;
+    left:20px;
+    font-weight:bold;
+    font-size:1.1rem;
+}
+.register{
+    color:black;
+}
+.register:hover{
+    color:whitesmoke;
+}
